--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,16 @@ readme = "README.md"
 python = "3.11"
 PySide6 = "^6.4.1"
 Pillow = "^9.3.0"
+opencv-python = "^4.6.0.66"
+pyheif = {url = "https://github.com/mpasternak/pyheif/archive/refs/tags/0.7.1-iplweb.zip"}
+pi-heif = "^0.8.0"
+numpy = "^1.23.5"
+piexif = "^1.1.3"
+beautifulsoup4 = "^4.11.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^5.6.2"
 
 [build-system]
 requires = ["poetry-core"]
