--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ pyinstaller = "^5.6.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
