--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         run: curl -sSL https://install.python-poetry.org | python3 -
         
       - name: Install deps
-        run: poetry install --no-root
+        run: /Users/runner/.local/bin/poetry install --no-root
         
       - name: Build
         run: make clean macos
