--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,8 @@ jobs:
       - name: Build ZIP
         run: make zip-app
         
+     - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: application.app.zip
+          path: application.app.zip
