--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "fidmaa"
-version = "0.1.0"
+name = "fidmaa-gui"
+version = "0.1.1"
 description = "What's FIDMAA?"
 authors = ["Michał Pasternak <michal.dtz@gmail.com>"]
 license = "MIT"
@@ -15,6 +15,7 @@ numpy = "^1.23.5"
 piexif = "^1.1.3"
 beautifulsoup4 = "^4.11.1"
 pyheif-iplweb = "^0.7.1.dev1176"
+portrait-analyser = "^0.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -27,3 +28,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
+
+[tool.poetry.scripts]
+fidmaa_gui = "fidmaa_gui.entrypoints:run"
