--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ piexif = "^1.1.3"
 beautifulsoup4 = "^4.11.1"
 pyheif-iplweb = "^0.7.1.dev1176"
 portrait-analyser = "^0.1.2"
+pyvistaqt = "^0.11.0"
+fidmaa-simple-viewer = "^0.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
